<resources>
    <string name="app_name">Service Per Hour</string>
    <string name="email">service@gmail.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Chat</string>
    <string name="menu_slideshow">Notifiations</string>
    <string name="menu_tools">Meetings</string>
    <string name="menu_share">Customer Support</string>
    <string name="menu_send">Report a seller</string>
    <string name="Request">Request a Teacher</string>
    <string name="term">Search by term</string>
    <string name="service">service</string>
    <string name="category">category</string>
    <string name="price">Price per hour</string>
    <string name="gender1">gender</string>
    <string name="search">search</string>
    <string name="signup">New here? <b>signup</b></string>
    <string name="ForgotPassword"><u>Forgot your password?</u></string>
    <string name="fullname">Full Name</string>
    <string name="signup2">Sign Up</string>
    <string name="signin">Already a member?</string>
    <string name="password">Password</string>
    <string name="email1">Email</string>
    <string name="name">Name</string>
    <string name="terms"><u>Terms and conditions</u></string>
    <string name="agree">I agree to all</string>
    <string name="already">Already a member</string>
    <string name="Terms_and_conditions">Terms and conditions</string>
    <string name="ShowPassword">Show Password</string>
    <string name="Alreadymember">Already a member?<u>Sign in</u></string>
</resources>
